Created Machine state of player

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -36,6 +36,12 @@ list=Array[Dictionary]([{
 "path": "res://src/enemy_2/enemy_2.gd"
 }, {
 "base": &"CharacterBody2D",
+"class": &"EnemyBridge",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/enemies/bringer_death/bringer_death.gd"
+}, {
+"base": &"CharacterBody2D",
 "class": &"EnemyDeamon",
 "icon": "",
 "language": &"GDScript",
@@ -120,6 +126,12 @@ list=Array[Dictionary]([{
 "path": "res://src/scenes/scene_levels/levelsLevel.gd"
 }, {
 "base": &"Node",
+"class": &"MachineState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/players/player_knight/machine_state.gd"
+}, {
+"base": &"Node",
 "class": &"Main",
 "icon": "",
 "language": &"GDScript",
@@ -154,6 +166,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://src/scenes/scene_3/scene_3.gd"
+}, {
+"base": &"Node",
+"class": &"StateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://src/players/player_knight/state.gd"
 }, {
 "base": &"Control",
 "class": &"TitleScreen",
