--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,18 +9,18 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-10
+dock_split_2=98
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=145
-dock_hsplit_3=-287
+dock_hsplit_2=127
+dock_hsplit_3=-193
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/enemies/demon_slime/spritesheets/demon_slime_FREE_v1.0_288x160_spritesheet.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/enemies/", "res://src/enemies/demon_slime/", "res://src/enemies/demon_slime/spritesheets/", "res://src/enemies/demon_slime/individual sprites/", "res://src/enemies/demon_slime/individual sprites/05_demon_death/", "res://src/enemies/demon_slime/individual sprites/04_demon_take_hit/", "res://src/enemies/demon_slime/individual sprites/03_demon_cleave/", "res://src/enemies/demon_slime/individual sprites/02_demon_walk/", "res://src/enemies/demon_slime/individual sprites/01_demon_idle/", "res://src/enemies/demon_slime/aseprite/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/players/player_knight/state.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/players/", "res://src/players/player_knight/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,21 +29,18 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_2/level.tscn", "res://src/scenes/scene_levels/level_2/level_map/level_map.tscn", "res://src/enemies/bringer_death/bringer_death.tscn", "res://src/player_knight.tscn", "res://src/enemies/demon_slime/demonslime.tscn")
 current_scene="res://src/player_knight.tscn"
-center_split_offset=-298
+center_split_offset=-203
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://src/enemies/bringer_death/bringer_death.gd", "res://src/player/bullet.gd", "res://level/coin.gd", "res://gui/coins_counter.gd", "res://src/enemies/demon_slime/demonslime.gd", "res://src/enemy_2/enemy_2.gd", "res://src/scenes/scene_levels/level_1/level.gd", "res://src/scenes/scene_levels/level_2/level.gd", "res://src/scenes/scene_levels/level_2/level_spleetscreen.gd", "res://src/scenes/main.gd", "res://next_level.gd", "res://gui/pause_menu.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/scenes/Scene.gd", "res://src/scenes/scene_2/scene_2.gd", "res://src/gui/title_screen.gd", "res://src/enemies/bringer_death/vision_attack.gd"]
-selected_script="res://src/players/player_knight/player_knight.gd"
-open_help=["Area2D", "CharacterBody2D", "String"]
+open_scripts=["res://src/players/player_knight/attack_state.gd", "res://src/enemies/bringer_death/bringer_death.gd", "res://level/coin.gd", "res://src/enemies/demon_slime/demonslime.gd", "res://src/players/player_knight/doble_jump_state.gd", "res://src/players/player_knight/idle_state.gd", "res://src/players/player_knight/jump_state.gd", "res://src/scenes/scene_levels/level_2/level.gd", "res://src/players/player_knight/machine_state.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/players/player_knight/spawn_state.gd", "res://src/players/player_knight/state.gd"]
+selected_script="res://src/players/player_knight/attack_state.gd"
+open_help=["Node"]
 script_split_offset=112
 list_split_offset=46
-window_rect=Rect2i(70, 64, 954, 704)
-window_screen=0
-window_screen_rect=Rect2i(70, 27, 954, 741)
 
 [ShaderEditor]
 
