--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -63,7 +63,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 22,
-"scroll_position": 2.0,
+"scroll_position": 8.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 3,
@@ -107,9 +107,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 12,
 "folded_lines": Array[int]([77]),
-"h_scroll_position": 48,
+"h_scroll_position": 0,
 "row": 8,
-"scroll_position": 7.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -151,7 +151,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 1.0,
 "selection": true,
 "selection_from_column": 0,
 "selection_from_line": 15,
@@ -185,9 +185,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 1,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 67,
+"h_scroll_position": 0,
 "row": 87,
-"scroll_position": 80.0,
+"scroll_position": 74.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -231,9 +231,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 73,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 147,
+"h_scroll_position": 33,
 "row": 69,
-"scroll_position": 61.0,
+"scroll_position": 58.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -261,7 +261,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
-"scroll_position": 3.0,
+"scroll_position": 9.0,
 "selection": true,
 "selection_from_column": 30,
 "selection_from_line": 9,
@@ -279,7 +279,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 56,
-"scroll_position": 22.0,
+"scroll_position": 42.0,
 "selection": true,
 "selection_from_column": 14,
 "selection_from_line": 56,
@@ -383,7 +383,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 0.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -421,11 +421,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([125, 133, 139, 143, 328, 361, 462, 466]),
-"h_scroll_position": 0,
-"row": 108,
-"scroll_position": 91.0,
+"column": 31,
+"folded_lines": Array[int]([315, 329, 333, 378, 383, 397, 414, 419, 424, 435]),
+"h_scroll_position": 111,
+"row": 16,
+"scroll_position": 16.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -481,16 +481,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
-"folded_lines": Array[int]([121]),
+"column": 13,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 24,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 11,
-"selection_from_line": 0,
-"selection_to_column": 22,
-"selection_to_line": 0,
+"selection_from_column": 4,
+"selection_from_line": 24,
+"selection_to_column": 13,
+"selection_to_line": 24,
 "syntax_highlighter": "GDScript"
 }
 
@@ -513,11 +513,113 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 263,
-"scroll_position": 229.0,
+"row": 258,
+"scroll_position": 233.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 21.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/machine_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 20,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 41,
+"scroll_position": 25.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/idle_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 5,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 21,
+"scroll_position": 15.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/jump_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 31,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 31,
+"scroll_position": 24.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/spawn_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/doble_jump_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 23,
+"selection_from_line": 6,
+"selection_to_column": 26,
+"selection_to_line": 6,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/attack_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
