--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=98
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=127
-dock_hsplit_3=-193
+dock_hsplit_2=145
+dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://src/players/player_knight/state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/players/", "res://src/players/player_knight/")
+dock_filesystem_selected_paths=PackedStringArray("res://src/player/player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://src/", "res://src/player/", "res://gui/", "res://addons/", "res://addons/virtual_joystick_custom/", "res://addons/virtual_joystick_custom/test/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,16 +29,16 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://src/scenes/scene_levels/level_2/level.tscn", "res://src/scenes/scene_levels/level_2/level_map/level_map.tscn", "res://src/enemies/bringer_death/bringer_death.tscn", "res://src/player_knight.tscn", "res://src/enemies/demon_slime/demonslime.tscn")
 current_scene="res://src/player_knight.tscn"
-center_split_offset=-203
+center_split_offset=-192
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://src/players/player_knight/attack_state.gd", "res://src/enemies/bringer_death/bringer_death.gd", "res://level/coin.gd", "res://src/enemies/demon_slime/demonslime.gd", "res://src/players/player_knight/doble_jump_state.gd", "res://src/players/player_knight/idle_state.gd", "res://src/players/player_knight/jump_state.gd", "res://src/scenes/scene_levels/level_2/level.gd", "res://src/players/player_knight/machine_state.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/players/player_knight/spawn_state.gd", "res://src/players/player_knight/state.gd"]
-selected_script="res://src/players/player_knight/attack_state.gd"
-open_help=["Node"]
+open_scripts=["res://src/players/player_knight/attack_state.gd", "res://src/enemies/demon_slime/demonslime.gd", "res://src/players/player_knight/hurt_state.gd", "res://src/players/player_knight/idle_attack_2_state.gd", "res://src/players/player_knight/idle_attack_3_state.gd", "res://src/players/player_knight/idle_attack_4_state.gd", "res://src/players/player_knight/idle_state.gd", "res://src/players/player_knight/jump_state.gd", "res://src/players/player_knight/machine_state.gd", "res://src/player/player.gd", "res://src/players/player_knight/player_knight.gd", "res://src/players/player_knight/slide_state.gd", "res://src/players/player_knight/spawn_state.gd", "res://src/players/player_knight/state.gd"]
+selected_script="res://src/players/player_knight/jump_state.gd"
+open_help=[]
 script_split_offset=112
 list_split_offset=46
 
@@ -56,4 +56,4 @@ log_filter_1=true
 log_filter_3=true
 log_filter_4=true
 collapse=false
-show_search=true
+show_search=false
