--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -105,12 +105,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 12,
+"column": 51,
 "folded_lines": Array[int]([77]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 0.0,
-"selection": false,
+"row": 72,
+"scroll_position": 65.0,
+"selection": true,
+"selection_from_column": 34,
+"selection_from_line": 72,
+"selection_to_column": 51,
+"selection_to_line": 72,
 "syntax_highlighter": "GDScript"
 }
 
@@ -421,12 +425,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
-"folded_lines": Array[int]([315, 329, 333, 378, 383, 397, 414, 419, 424, 435]),
-"h_scroll_position": 111,
-"row": 16,
-"scroll_position": 16.0,
-"selection": false,
+"column": 12,
+"folded_lines": Array[int]([87, 97, 103, 186, 359, 421]),
+"h_scroll_position": 0,
+"row": 184,
+"scroll_position": 165.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 184,
+"selection_to_column": 12,
+"selection_to_line": 184,
 "syntax_highlighter": "GDScript"
 }
 
@@ -481,16 +489,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 0.0,
+"row": 79,
+"scroll_position": 75.0,
 "selection": true,
-"selection_from_column": 4,
-"selection_from_line": 24,
-"selection_to_column": 13,
-"selection_to_line": 24,
+"selection_from_column": 0,
+"selection_from_line": 79,
+"selection_to_column": 61,
+"selection_to_line": 82,
 "syntax_highlighter": "GDScript"
 }
 
@@ -513,11 +521,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 258,
-"scroll_position": 233.0,
+"row": 260,
+"scroll_position": 245.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -527,12 +535,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 21.0,
-"selection": false,
+"row": 39,
+"scroll_position": 27.0,
+"selection": true,
+"selection_from_column": 36,
+"selection_from_line": 39,
+"selection_to_column": 45,
+"selection_to_line": 39,
 "syntax_highlighter": "GDScript"
 }
 
@@ -541,11 +553,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
-"scroll_position": 25.0,
+"row": 48,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -555,12 +567,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 15.0,
-"selection": false,
+"row": 34,
+"scroll_position": 21.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 33,
+"selection_to_column": 33,
+"selection_to_line": 33,
 "syntax_highlighter": "GDScript"
 }
 
@@ -569,10 +585,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
+"row": 40,
 "scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -586,9 +602,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 7,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 6,
+"selection_to_column": 29,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -597,16 +617,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 23,
-"selection_from_line": 6,
-"selection_to_column": 26,
-"selection_to_line": 6,
+"row": 10,
+"scroll_position": 5.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -615,11 +631,107 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/debug_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
 "scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 18,
+"selection_from_line": 11,
+"selection_to_column": 31,
+"selection_to_line": 11,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/hurt_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 3,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/slide_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/idle_attack_2_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 7,
+"selection_to_column": 26,
+"selection_to_line": 7,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/idle_attack_3_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://src/players/player_knight/idle_attack_4_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 33,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
